--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -10,11 +10,11 @@ buildscript {
         supportLibVersion = "29.0.0"
     }
     repositories {
+        mavenCentral()
         google()
-        jcenter()
     }
     dependencies {
-        classpath('com.android.tools.build:gradle:3.5.3')
+        classpath('com.android.tools.build:gradle:4.2.2')
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,6 +24,7 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        mavenCentral()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
@@ -34,6 +35,5 @@ allprojects {
         }
 
         google()
-        jcenter()
     }
 }
