--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "jest": {
     "preset": "react-native",
     "transform": {
-      "node_modules/react-native/.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+      "node_modules/react-native/.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js",
+      "node_modules/@react-native/.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/example/"
@@ -42,6 +43,9 @@
     "url": "https://github.com/cooperka/react-native-snackbar/issues"
   },
   "homepage": "https://github.com/cooperka/react-native-snackbar",
+  "resolutions": {
+    "react-native/@jest/create-cache-key-function": "27.0.6"
+  },
   "peerDependencies": {
     "react": ">=16",
     "react-native": ">=0.60"
@@ -50,7 +54,7 @@
     "@babel/cli": "7.14.5",
     "@babel/core": "7.14.6",
     "babel-eslint": "10.1.0",
-    "babel-jest": "24.9.0",
+    "babel-jest": "27.0.6",
     "eslint": "7.30.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-cooperka": "1.0.4",
@@ -58,10 +62,10 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-native": "3.11.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react": "16.10.2",
-    "react-native": "0.61.2",
+    "jest": "27.0.6",
+    "metro-react-native-babel-preset": "0.66.1",
+    "react": "17.0.2",
+    "react-native": "0.64.2",
     "typescript": "4.3.5"
   }
 }
