--- a/package.json
+++ b/package.json
@@ -47,21 +47,21 @@
     "react-native": ">=0.60"
   },
   "devDependencies": {
-    "@babel/cli": "7.6.4",
-    "@babel/core": "7.6.4",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
-    "eslint": "6.5.1",
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-config-cooperka": "1.0.4",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-native": "3.7.0",
-    "jest": "24.9.0",
-    "metro-react-native-babel-preset": "0.56.0",
-    "react": "16.10.2",
-    "react-native": "0.61.2",
-    "typescript": "3.6.4"
+    "@babel/cli": "7.6.*",
+    "@babel/core": "7.6.*",
+    "babel-eslint": "10.0.*",
+    "babel-jest": "24.9.*",
+    "eslint": "6.5.*",
+    "eslint-config-airbnb": "18.0.*",
+    "eslint-config-cooperka": "1.0.*",
+    "eslint-plugin-import": "2.18.*",
+    "eslint-plugin-jsx-a11y": "6.2.*",
+    "eslint-plugin-react": "7.16.*",
+    "eslint-plugin-react-native": "3.7.*",
+    "jest": "24.9.*",
+    "metro-react-native-babel-preset": "0.56.*",
+    "react": "16.10.*",
+    "react-native": "0.61.*",
+    "typescript": "3.6.*"
   }
 }
